--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -1,5 +1,6 @@
 parameters:
     creonit_admin.component.field.default.class: Creonit\AdminBundle\Component\Field\Field
+    creonit_admin.component.field.external.class: Creonit\AdminBundle\Component\Field\ExternalField
     creonit_admin.component.field.file.class: Creonit\AdminBundle\Component\Field\FileField
     creonit_admin.component.field.image.class: Creonit\AdminBundle\Component\Field\ImageField
     creonit_admin.component.field.video.class: Creonit\AdminBundle\Component\Field\VideoField
@@ -34,6 +35,11 @@ services:
 
     creonit_admin.component.field.default:
         class: '%creonit_admin.component.field.default.class%'
+        parent: creonit_admin.component.field
+        shared: false
+
+    creonit_admin.component.field.external:
+        class: '%creonit_admin.component.field.external.class%'
         parent: creonit_admin.component.field
         shared: false
 
