--- a/bower.json
+++ b/bower.json
@@ -13,10 +13,10 @@
   "dependencies": {
     "jquery": "^2.2.3",
     "arcticModal": "komunyako/arcticModal#dev",
-    "twig.js": "0.8.8",
     "bootstrap": "^3.3.6",
     "tinymce": "^4.3.13",
-    "tinymce-i18n": "^4.0.0"
+    "tinymce-i18n": "^4.0.0",
+    "twig.js": "0.8.8"
   },
   "overrides": {
     "twig.js": {
