Лицензия для публикации в packagist

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "symfony",
     "admin"
   ],
-  "license": "GNU GPLv3",
+  "license": "GPL-3.0-only",
   "autoload": {
     "psr-4": {
       "Creonit\\AdminBundle\\": "src"
