--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -5,3 +5,12 @@ services:
         arguments:
             - '@service_container'
             - '@twig'
+
+    Creonit\AdminBundle\Manager:
+        alias: creonit_admin
+
+    Creonit\AdminBundle\Controller\:
+        autowire: true
+        autoconfigure: true
+        resource: '../../Controller'
+        tags: ['controller.service_arguments']
